@@ -1,5 +1,11 @@
 ZUG Change Log
 
+The following has been introduced in Ver 7.4.2
+Bug Fixed
+*Bug 1070 relative path support for include files
+*Bug 1063 File Menu in GUI had a typo for "Recently Used"
+
+
 The following has been introduced in Ver 7.4.1
 New Features
 local var support in appendtocontextvar atom
